Add process and include

--- a/tpp_workflows.config
+++ b/tpp_workflows.config
@@ -48,6 +48,9 @@ process{
     withName:proteinprophet {
     	container = 'digitalproteomes/tpp:version-6.0.0.0'
     }
+    withName:patch_progensis {
+    	container = 'digitalproteomes/tpp:version-6.0.0.0'	
+    }
 }
 
 
