--- a/tpp_workflows.config
+++ b/tpp_workflows.config
@@ -48,7 +48,7 @@ process{
     withName:proteinprophet {
     	container = 'digitalproteomes/tpp:version-6.0.0.0'
     }
-    withName:patch_progensis {
+    withName:patch_progenesis {
     	container = 'digitalproteomes/tpp:version-6.0.0.0'	
     }
 }
