- Updated tpp version - Added search_folder param for xinteract only workflow

--- a/tpp_workflows.config
+++ b/tpp_workflows.config
@@ -1,6 +1,7 @@
 params {
     comet_threads = 20
     dda_folder = 'Data/DDA'
+    search_folder = 'Data/Searches'
     comet_params = 'Params/comet.params'
     protein_db = 'Results/Databases/proteome.fasta'
     tpp = '-OAPdplIw -PPM'
@@ -16,40 +17,40 @@ process{
 	container = 'digitalproteomes/comet:version-2021010'
     }
     withName:xinteract {
-	container = 'digitalproteomes/tpp:version-6.0.0.0'
+	container = 'digitalproteomes/tpp:version-6.1.0.1'
     }
     withName:refactor_pepxml {
-	container = 'digitalproteomes/tpp:version-6.0.0.0'
+	container = 'digitalproteomes/tpp:version-6.1.0.1'
     }
     withName:refactor_protxml {
-	container = 'digitalproteomes/tpp:version-6.0.0.0'
+	container = 'digitalproteomes/tpp:version-6.1.0.1'
     }
     withName:st_peter {
-	container = 'digitalproteomes/tpp:version-6.0.0.0'
+	container = 'digitalproteomes/tpp:version-6.1.0.1'
     }
     withName:st_peter2matrix {
-	container = 'digitalproteomes/tpp:version-6.0.0.0'
+	container = 'digitalproteomes/tpp:version-6.1.0.1'
     }    
     withName:mayu {
-	container = 'digitalproteomes/tpp:version-6.0.0.0'
+	container = 'digitalproteomes/tpp:version-6.1.0.1'
     }
     withName:tpp_stat {
-	container = 'digitalproteomes/tpp:version-6.0.0.0'
+	container = 'digitalproteomes/tpp:version-6.1.0.1'
     }
     withName:pepxml2tsv {
-    	container = 'digitalproteomes/tpp:version-6.0.0.0'
+    	container = 'digitalproteomes/tpp:version-6.1.0.1'
     }
     withName:protxml2tsv {
-    	container = 'digitalproteomes/tpp:version-6.0.0.0'
+    	container = 'digitalproteomes/tpp:version-6.1.0.1'
     }
     withName:filter_pep_tsv {
-    	container = 'digitalproteomes/tpp:version-6.0.0.0'
+    	container = 'digitalproteomes/tpp:version-6.1.0.1'
     }
     withName:proteinprophet {
-    	container = 'digitalproteomes/tpp:version-6.0.0.0'
+    	container = 'digitalproteomes/tpp:version-6.1.0.1'
     }
     withName:patch_progenesis {
-    	container = 'digitalproteomes/tpp:version-6.0.0.0'	
+    	container = 'digitalproteomes/tpp:version-6.1.0.1'	
     }
 }
 
